# AutoAnalyst-Engine

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/: config.py  engine.py  schema.py  tools.py
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Artifactssidebar.tsx  Dashboard.tsx  Reportview.tsx  Thoughtstream.tsx  inputarea.tsx
frontend/src/lib/: utils.ts
frontend/src/services/: AgentWeSocket.ts  mockWeSocket.ts
frontend/src/types/: index.ts
