[project]
name = "autoanalyst-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.137.2",
    "groq>=1.4.0",
    "pathlib>=1.0.1",
    "tavily>=1.1.0",
    "uvicorn>=0.49.0",
    "websocket>=0.2.1",
    "websockets>=16.0",
]
